<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_license"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/license_description"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/license_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="web"
        android:text="@string/apache_license"/>

    <TextView
        android:id="@+id/library_name1"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/library1"/>

    <TextView
        android:id="@+id/library_link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/library_link1"/>

    <TextView
        android:id="@+id/library_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/library2"/>

    <TextView
        android:id="@+id/library_link2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/library_link2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/last_update_date"/>

</LinearLayout>