<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/since"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/bio_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/since"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@id/bio_since"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/bio_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:layout_below="@id/bio_location"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/bio_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/web"
        android:autoLink="web"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

</RelativeLayout>